tests/paczka1/small_fuzzy/89171546.err
Error in line 2: VCAA A247 16,0
Error in line 5: RijM S444 43,0
Error in line 14: VCAA A247 10,9
